fixed spacing issue

--- a/src/components/features/dashboard/TransactionTableSm/DashTableStyles.scss
+++ b/src/components/features/dashboard/TransactionTableSm/DashTableStyles.scss
@@ -20,7 +20,7 @@
     .trx__adjust {
       display: flex;
       justify-content: space-between;
-      padding: 1rem 0px;
+      padding: 0.875rem 0px;
     }
   }
 
